Update the font-size and spacing issue

--- a/assets/base.css
+++ b/assets/base.css
@@ -3220,7 +3220,7 @@ header.SectionHeader .Link {
 
 .template-index .rave-reviews .rave-reviews-main h2 {
   margin-bottom: 25px;
-  font-size: 42px;
+  font-size: 48px;
   font-style: normal;
   font-weight: 500;
   line-height: 62px; /* 147.619% */
