--- a/assets/section-shop-by-category.css
+++ b/assets/section-shop-by-category.css
@@ -41,8 +41,8 @@
 }
 
 .category__carousel--container {
-    margin-top: 80px;
-    margin-bottom: 80px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     position: relative;
     padding: 0 48px;
 }
@@ -151,7 +151,7 @@
 
 @media (max-width: 768px) {
     .header__heading {
-        font-size: 36px;
+        font-size: 32px;
     }
 }
 
@@ -170,7 +170,7 @@
         text-align: center;
         margin-left: auto;
         margin-right: auto;
-        font-size: 36px;
+        font-size: 32px;
         font-weight: 500;
         line-height: 54px;
         letter-spacing: 0.02em;
